--- a/src/Adstacy/NotificationBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/NotificationBundle/Resources/translations/messages.id.yml
@@ -1,8 +1,9 @@
 notification:
     title: Notifikasi
-    comment: '<a class="media notification" href="%url_ad%"><div class="pull-left"><img src="%profile_pic%" class="media-object notif-pic"></div><div class="media-body"><div class="time">%time%</div><div><span class="username">%user_from%</span> mengomentari ad anda: <span class="notif-comment">"%comment%"</span></div></div></a>'
-    mention: '<a class="media notification" href="%url_ad%"><div class="pull-left"><img src="%profile_pic%" class="media-object notif-pic"></div><div class="media-body"><div class="time">%time%</div><div><span class="username">%user_from%</span> mention anda di komentar: <span class="notif-comment">"%comment%"</span></div></div></a>'
-    follow: '<a class="media notification" href="%url_user%"><div class="pull-left"><img src="%profile_pic%" class="media-object notif-pic"></div><div class="media-body"><div class="time">%time%</div><span class="username">%user_from%</span> follow anda </div></a>'
-    promote: '<a class="media notification" href="%url_ad%"><div class="pull-left"><img src="%profile_pic%" class="media-object notif-pic"></div><div class="media-body"><div class="time">%time%</div><span class="username">%user_from%</span> promtote ad anda</div></a>'
+    comment: 'mengomentari ad anda: '
+    mention: 'mention anda di komentar: '
+    follow: 'follow anda'
+    promote: 'promote ad anda'
+
     no_notification: Tidak ada notifikasi
     show_all: Semua notifikasi
