--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -95,18 +95,10 @@ form_ad:
     content: Long description
     content_trigger: Click to add more images and descriptions
     submit: Save
+    hashtags: Hashtags
     placeholders:
-        description: Describe your ads creatively. See examples for reference.
+        description: Write your ads description
     characters_left: '<span id="chars-left">%left%</span> characters left'
-    helps:
-        description: 'Use #hashtags to categorize your ads'
-    example: examples
-    examples:
-        example1: "Rp250.000 #tshirt #brand #jual #medan #pria #indonesia"
-        example2: "Launching #adstacy 9 September 2013 #event #launching"
-        example3: "Job Vacancy for Admin PT.XXX #lowongankerja requirements #s1"
-        example4: "#cucigudang #diskon #promo 50% all item toko xxx"
-        example5: "#rumah 4x18m area #medan #marelan Rp250.000.000 NEGO"
 
 form_contact:
     subject: Subject
