--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -65,6 +65,9 @@ user:
     no_followings:
         message: Belum ada yang follow Anda
 
+comment:
+    load_more: komentar sebelumnya
+
 search:
     no_result:
         message: Hasil Pencarian Tidak Ditemukan
