--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -20,6 +20,7 @@ registering: Mendaftarkan...
 loggingin: Logging in...
 promoted_by: Juga dipromote oleh
 continue_to_explore: Lanjut ke Explore
+or: ATAU
 
 search_users: Users
 search_ads: Ads
@@ -95,8 +96,13 @@ form_ad:
     content_trigger: Klik untuk menambahkan gambar dan deskripsi lengkap
     submit: Simpan
     hashtags: hashtags
+    image_trigger: Klik untuk mengupload image
+    upload_image_title: Upload dari komputer atau url
     placeholders:
         description: Tulis deskripsi iklan Anda.
+        url: http://
+        title: Judul
+        youtube_id: Masukkan Youtube ID
     characters_left: 'sisa <span id="chars-left">%left%</span> karakter'
 
 form_contact:
