--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -97,13 +97,16 @@ form_ad:
     submit: Simpan
     hashtags: hashtags
     image_trigger: Klik untuk mengupload image
-    upload_image_title: Upload dari komputer atau url
+    upload_image_title: Upload Gambar
     placeholders:
         description: Tulis deskripsi iklan Anda.
         url: http://
         title: Judul
         youtube_id: Masukkan Youtube ID
     characters_left: 'sisa <span id="chars-left">%left%</span> karakter'
+    help:
+        upload_from_computer: Upload dari komputer (mendukung jpg dan png)
+        upload_from_url: Paste url dari image (mendukung jpg dan png)
 
 form_contact:
     subject: Judul
