--- a/src/Adstacy/AppBundle/Resources/translations/validators.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/validators.id.yml
@@ -8,6 +8,9 @@ ad:
         max_count: Anda hanya dapat mengupload maksimal {{ limit }} gambar
     tags:
         min_count: Anda harus memasukkan minimal {{ limit }} tag
+    youtube_url:
+        not_valid: Url youtube tidak valid
+        not_blank: Url youtube tidak boleh kosong
 
 image:
     file:
