Ajax load more comments.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -68,7 +68,7 @@ user:
         message: Nobody follows %username% yet
 
 comment:
-    load_more: load more comments
+    load_more: View <span class="comments-count">%count%</span> more comments
 
 search:
     no_result:
