--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -67,7 +67,7 @@ user:
         message: Belum ada yang follow Anda
 
 comment:
-    load_more: komentar sebelumnya
+    load_more: Lihat <span class="comments-count">%count%</span> komentar lainnya
 
 search:
     no_result:
