--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -21,6 +21,9 @@ loggingin: Logging in...
 promoted_by: Also promoted by
 continue_to_explore: Continue to Explore
 or: OR
+find_friends: Find friends
+find_friends_facebook: Find facebook friends
+find_friends_twitter: Find twitter friends
 
 search_users: Users
 search_ads: Ads
