--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -21,6 +21,7 @@ loggingin: Logging in...
 promoted_by: Juga dipromote oleh
 continue_to_explore: Lanjut ke Explore
 or: ATAU
+find_friend: Cari teman
 
 search_users: Users
 search_ads: Ads
