Fix bug when browsing ad in anonymous.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -15,6 +15,7 @@ close: Close
 delete: Delete
 edit: Edit
 more: More
+report: Report
 saving: Saving...
 registering: Registering...
 loggingin: Logging in...
