--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -15,6 +15,7 @@ close: Tutup
 delete: Hapus
 edit: Ubah
 more: Lagi
+report: Lapor
 saving: Menyimpan...
 registering: Mendaftarkan...
 loggingin: Logging in...
