--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -26,6 +26,7 @@ or: OR
 find_friends: Find friends
 find_friends_facebook: Find facebook friends
 find_friends_twitter: Find twitter friends
+who_to_follow: Who to follow
 
 search_users: Users
 search_ads: Ads
