--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -24,6 +24,9 @@ promoted_by: Juga dipromote oleh
 continue_to_explore: Lanjut ke Explore
 or: ATAU
 find_friend: Cari teman
+find_friends_facebook: Cari teman facebook
+find_friends_twitter: Cari teman twitter
+who_to_follow: Rekomendasi user
 
 search_users: Users
 search_ads: Ads
