Add save image/text/video according to state.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -108,6 +108,9 @@ form_ad:
     content: Long description
     content_trigger: Click to add more images and descriptions
     submit: Save
+    submit_image: Save image
+    submit_text: Save text
+    submit_video: Save video
     hashtags: Hashtags
     image_trigger: Click to upload image
     upload_image_title: Upload Image
