--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -27,6 +27,7 @@ find_friend: Cari teman
 find_friends_facebook: Cari teman facebook
 find_friends_twitter: Cari teman twitter
 who_to_follow: Rekomendasi user
+ctrl_copy: Ctrl + C untuk mengkopi
 
 search_users: Users
 search_ads: Ads
