Changed find friends styles.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -24,9 +24,9 @@ loggingin: Logging in...
 promoted_by: Also promoted by
 continue_to_explore: Continue to Explore
 or: OR
-find_friends: Find friends
-find_friends_facebook: Find facebook friends
-find_friends_twitter: Find twitter friends
+find_friends: Find Friends
+find_friends_facebook: Facebook Friends
+find_friends_twitter: Twitter Friends
 who_to_follow: Who to follow
 ctrl_copy: Ctrl + C to copy
 
