--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -23,9 +23,9 @@ loggingin: Logging in...
 promoted_by: Juga dipromote oleh
 continue_to_explore: Lanjut ke Explore
 or: ATAU
-find_friend: Cari teman
-find_friends_facebook: Cari teman facebook
-find_friends_twitter: Cari teman twitter
+find_friend: Cari Teman
+find_friends_facebook: Teman Facebook
+find_friends_twitter: Teman Twitter
 who_to_follow: Rekomendasi user
 ctrl_copy: Ctrl + C untuk mengkopi
 
