Style who to follow.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -27,6 +27,7 @@ find_friend: Cari Teman
 find_friends_facebook: Teman Facebook
 find_friends_twitter: Teman Twitter
 who_to_follow: Rekomendasi user
+no_who_to_follow: Tidak ada rekomendasi
 ctrl_copy: Ctrl + C untuk mengkopi
 
 search_users: Users
