--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -28,6 +28,7 @@ find_friends: Find Friends
 find_friends_facebook: Facebook Friends
 find_friends_twitter: Twitter Friends
 who_to_follow: Who to follow
+no_who_to_follow: Nobody to follow
 ctrl_copy: Ctrl + C to copy
 
 search_users: Users
