--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -24,6 +24,7 @@ loggingin: Logging in...
 promoted_by: Also promoted by
 continue_to_explore: Continue to Explore
 or: OR
+you: You
 find_friends: Find Friends
 find_friends_facebook: Facebook Friends
 find_friends_twitter: Twitter Friends
@@ -68,6 +69,7 @@ ads:
     blocked: This ads have been blocked. Please edit it according to our <a href="%url%">terms</a>.
     report:
         success: Ads have been reported. We will look into this soon.
+    other_promotes: 'and <a class="count" href="#">%count%</a> others broadcast this'
 
 user:
     no_followers:
