--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -23,6 +23,7 @@ loggingin: Logging in...
 promoted_by: Juga dipromote oleh
 continue_to_explore: Lanjut ke Explore
 or: ATAU
+you: Kamu
 find_friend: Cari Teman
 find_friends_facebook: Teman Facebook
 find_friends_twitter: Teman Twitter
