--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -29,6 +29,7 @@ find_friends: Find Friends
 find_friends_facebook: Facebook Friends
 find_friends_twitter: Twitter Friends
 who_to_follow: Who to follow
+who_to_follow_getting_started: Follow these people to get started
 no_who_to_follow: Nobody to follow
 ctrl_copy: Ctrl + C to copy
 
