--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -28,6 +28,7 @@ find_friend: Cari Teman
 find_friends_facebook: Teman Facebook
 find_friends_twitter: Teman Twitter
 who_to_follow: Rekomendasi user
+who_to_follow_getting_started: Follow orang-orang ini untuk memulai
 no_who_to_follow: Tidak ada rekomendasi
 ctrl_copy: Ctrl + C untuk mengkopi
 
