Setting up for add/remove favourite tag.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -32,6 +32,7 @@ who_to_follow: Who to follow
 who_to_follow_getting_started: Follow these people to get started
 no_who_to_follow: Nobody to follow
 ctrl_copy: Ctrl + C to copy
+favtags.required: Tag cannot be blank
 
 search_users: Users
 search_ads: Ads
