Fix create ad tags.

--- a/src/Adstacy/AppBundle/Resources/translations/validators.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/validators.en.yml
@@ -10,6 +10,7 @@ ad:
         max_count: You can only upload max {{ limit }} images
     tags:
         min_count: You must add at least {{ limit }} tag
+        max_length: Tag maximal {{ limit }} characters
     youtube_url:
         not_valid: Youtube url is not valid
         not_blank: Youtube url cannot be blank
