--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -7,9 +7,9 @@ settings: Settings
 logout: Logout
 login: Login
 login.with: Login with
+register.with: Register with
 register: Register
 no_account_register: No account yet? Register now
-register.with: Register with
 forgot_password: Forgot password?
 cancel: Cancel
 close: Close
@@ -21,7 +21,6 @@ saving: Saving...
 submitting: Submitting...
 registering: Registering...
 loggingin: Logging in...
-promoted_by: Also promoted by
 continue_to_explore: Continue to Explore
 or: OR
 you: You
@@ -43,10 +42,8 @@ about: About
 terms: Terms
 privacy: Privacy Policy
 contact_us: Contact Us
-beta_info: We are currently on Beta. Feel free to contact us if you have any suggestions or questions <a href="%url%">here</a>
 subscription_notice: We will send your unread notifications to email twice a day
 
-#ads
 ads:
     create: Create ad
     delete:
@@ -56,7 +53,7 @@ ads:
     no_ads:
         message: %username% doesn't have any ads yet
         self_message: You don't have any ads yet
-        help: Create an ads now
+        help: Create an ad now
     no_promotes:
         message: %username% hasn't broadcasted any ads yet
         self_message: You haven't broadcasted any ads yet
@@ -114,7 +111,7 @@ form_profile:
 
 form_ad:
     image: Image
-    description: 'Description'
+    description: Description
     content: Long description
     content_trigger: Click to add more images and descriptions
     submit: Save
@@ -129,7 +126,6 @@ form_ad:
         url: http://
         title: Title
         youtube_url: Paste youtube video url here
-    characters_left: '<span id="chars-left">%left%</span> characters left'
     help:
         upload_from_computer: Upload from computer (supports jpg and png)
         upload_from_url: Paste url of image (supports jpg and png)
