--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -32,6 +32,7 @@ who_to_follow_getting_started: Follow orang-orang ini untuk memulai
 no_who_to_follow: Tidak ada rekomendasi
 ctrl_copy: Ctrl + C untuk mengkopi
 favtags.required: Tag tidak boleh kosong
+more_tags: tag lain
 
 search_users: Users
 search_ads: Ads
